clean up Sonar warnings